--- a/client/src/components/menu-item/menu-item.styles.scss
+++ b/client/src/components/menu-item/menu-item.styles.scss
@@ -11,12 +11,12 @@
 
   &:hover {
     cursor: pointer;
-  
+
     & .background-image {
       transform: scale(1.1);
       transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
     }
-  
+
     & .content {
       opacity: 0.9;
     }
@@ -52,7 +52,6 @@
     opacity: 0.7;
     position: absolute;
 
-
     .title {
       font-weight: bold;
       margin-bottom: 6px;
@@ -64,5 +63,9 @@
       font-weight: lighter;
       font-size: 16px;
     }
+  }
+
+  @media screen and (max-width: 800px) {
+    height: 200px;
   }
 }
